--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <div class="xiaz">
     	
     	<p data-scroll-reveal="enter left over 1s and move 100px after 0.1s"><a href="installation_package/Care_PC_Setup_1.0.0.exe"><img src="img/logo0.png" ></a></p>
-    	<span data-scroll-reveal="enter bottom over 2s and move 100px after 0.2s"><img src="img/shouzhi.png" ></span>
+    	<span data-scroll-reveal="enter bottom over 2s and move 100px after 0.2s"><!-- <img src="img/shouzhi.png" > --></span>
 
     </div>
+    
     <script>
     if (!(/msie [6|7|8|9]/i.test(navigator.userAgent))){
         (function(){
